Update license terms

--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,14 @@
 		Test package for org-wmaop
 	</description>
 
+	<licenses>
+		<license>
+			<name>The MIT License (MIT)</name>
+			<url>https://opensource.org/licenses/MIT</url>
+			<distribution>manual</distribution>
+		</license>
+	</licenses>
+
 	<dependencies>
 	    <!-- You can declare other package dependencies here and perform some checkout and merge magic -->
 	
